--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
       <option value="ja">日本語</option>
     </select><br>
 
-    <label>拾う位置（例：1,2,3 または 1,3,5）:</label>
-    <input type="text" id="pattern" placeholder="1,2,3"><br>
+    <label>拾う位置（例：1,2,3 または ???）または「?」検索:</label>
+    <input type="text" id="pattern" placeholder="1,2,3 または ???"><br>
+
+    <!-- 入力文字ボタン表示用 -->
+    <div id="char-buttons" style="margin-top:10px;"></div>
 
     <button type="submit">検索</button>
   </form>
